--- a/Class4/Bootstrap.html
+++ b/Class4/Bootstrap.html
@@ -215,7 +215,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 pull-left">
                     <h3>Kontaktai</h3>
                     <p>"Kavininkai"<br>
                 V. Vencevičiūtės i.v.<br> Bartų g. 26 Vilniaus raj.<br> Buivydiškeės <br> Tel./Fax.: +37069822228<br> El.p.: vend@inbox.lt
@@ -224,11 +224,11 @@
 
             <div class="col-md-3 pull-right">
                             <h3> Navigacija</h3>
-                                <ul>
-                                    <li>Siūlomos Paslaugos</li>
-                                    <li>Susisiekyte su mumis</li>
-                                    <li>Įdomybės</li>
-                                </ul>
+                                <p>
+                                    <a href="#visos-paslaugos">Siūlomos Paslaugos</a><br>
+                                    <a href="#susisiekyte">Susisiekite su Mumis</a><br>
+                                    <a href="#idomybes">Įdomybės</a>
+                                </p>
                         </div>
             </div>
         </div>
