--- a/Class4/Bootstrap.html
+++ b/Class4/Bootstrap.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div>
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" style="clear: both;">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Kavininkai</a>
+      <a class="navbar-brand">KAVININKAI</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -102,7 +102,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
- <div class="Paslaugos">
+ <section class="Paslaugos">
         <div class="container" id="visos-paslaugos">
             <h2 class="main-headings">Siūlomos Paslaugos</h2>
             <p class="main-text">Pasirinkite paslaugą pritaikyta jūsų poreikiams</p>
@@ -139,16 +139,16 @@
               </div>
             </div>
           </div>
-   </div>
- <div class="Contact" id="susisiekyte">
+   </section>
+ <section class="Contact" id="susisiekyte">
         <div class="container">
             <h2 class="main-headings">Susisiekyte su mumis</h2>
             <div class="row">
-              <div class="col-md-5" style="float: left; margin: 0 auto;">
+              <div class="col-md-6">
                   <div class="form-area">
                       <form role="form">
                       <br style="clear:both">
-                        <h3 style="margin-bottom: 25px; text-align: center;">Susisiekite</h3>
+                        <h3 style="text-align: center">Susisiekite</h3>
                         <div class="form-group">
 						  <input type="text" class="form-control" id="name" name="name" placeholder="Vardas Pavardė" required>
 					    </div>
@@ -169,9 +169,9 @@
                       </form>
                   </div>
               </div>
-              <div class="col-sm-5" style="float: right; margin: 0 auto;">
-                <div class="business-hours">
-                    <h3 style="margin-bottom: 25px; text-align: center;">Darbo Valandos</h3>
+              <div class="col-md-6">
+                  <div class="business-hours">
+                    <h3 style="margin-top: 40px; margin-bottom: 25px; text-align: center;">Darbo Valandos</h3>
                         <ul class="list-unstyled opening-hours">
                             <li>Pirmadienis <span class="pull-right">08:00-18:00</span></li>
                             <li>Antradienis <span class="pull-right">08:00-18:00</span></li>
@@ -182,11 +182,10 @@
                             <li>Sekmadienis <span class="pull-right">Nedirbame</span></li>
                         </ul>
                 </div>
-              </div>
             </div>
         </div>
- </div>
-<div class="Other" id="idomybes">
+ </section>
+<section class="Other" id="idomybes">
     <div class="container">
             <h2 class="main-headings">Įdomybės</h2>
             <div class="container idomybes">
@@ -211,7 +210,7 @@
                             </p>
             </div>
     </div>
-</div>
+</section>
     <footer class="footer">
         <div class="container">
             <div class="row">
