--- a/Class4/Bootstrap.html
+++ b/Class4/Bootstrap.html
@@ -36,13 +36,13 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Pagrindinis Puslapis <span class="sr-only">(current)</span></a></li>
       </ul>
-      <form class="navbar-form pull-right">
+        <form class="navbar-form pull-right">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Paieška">
         </div>
         <button type="submit" class="btn btn-default">Ieškoti</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
+        </form>
+      <ul class="nav navbar-nav pull-right">
         <li class="dropdown">
           <a href="#v" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Siūlomos Paslaugos<span class="caret"></span></a>
           <ul class="dropdown-menu">
